--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
     <button id='inc'>add</button>
     <button id='rnd'>random</button>
     <p id="done"></p>
-
+    <button id='inc1'>+1</button>
+    <button id='inc2'>+2</button>
+    <button id='inc3'>+3</button>
+    <p id="counter"></p>
   </body>
 </html>
